<resources>
    <string name="app_name">Cafteria Ordering System</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm">Confirm Password</string>
    <string name="register">Sign Up</string>
    <string name="login">LOGIN</string>
    <string name="logout">Log out</string>
    <string name="register_link">Do you already have an account? Sign up</string>
</resources>